fix: update variable types and method signatures
- Changed array parameter types from String[] to String in AFile.
- Updated Integer instantiation to Integer.valueOf in multiple classes.
- Refactored exception handling and string manipulation in Anime.
- Adjusted method signatures and variable declarations in Base and AG.
- Improved type safety by using enhanced for-loops and var in several classes.
- Replaced StringBuffer with String concatenation in AConE.
- Modified JPanel classes to use final for UI components.